--- a/index.html
+++ b/index.html
@@ -7,42 +7,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <table>
-    <caption>Table</caption>
-    <thead>
-        <tr>
-            <th>Header 1</th>
-            <th>Header 2</th>
-            <th>Header 3</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Cell 1</td>
-            <td>Cell 2</td>
-            <td>Cell 3</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td>Footer 1</td>
-            <td>Footer 2</td>
-            <td>Footer 3</td>
-        </tr>
-    </tfoot>
-  </table>
-
-  <ol start="40">
-    <li>Item</li>
-    <li>Item</li>
-    <li>Item</li>
-    <li>Item</li>
-    <li>Item</li>
-  </ol>
-
-  <form action="#" method="post" name="test-form">
-    <input type="checkbox" name="name" id="user-name">
-    <label for="user-name">User name</label>
-    <button type="button">hey</button>
-  </form>
+  <div class="container">
+    <div class="box">
+    </div>
+    <div class="box">
+    </div>
+  </div>
+</body>
 </html>
