--- a/nav.html
+++ b/nav.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="nav.css" />
+    <script> </script>
   </head>
   <body>
     <nav>
